@@ -1,3 +1,8 @@
+2003-10-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m-proc.el (w3m-process-filter): Check return value of
+	`w3m-process-handler-parent-buffer' to move current buffer safely.
+
 2003-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-modeline-image-status-on,
